--- a/rebar.config
+++ b/rebar.config
@@ -1,13 +1,9 @@
 {sub_dirs, ["rel"]}.
 
-% {deps, [
-%   {amqp_client, "", {hg, "rabbitmq-erlang-client", "amqp_client"}}
-%        ]}.
-
-{erl_opts, [debug_info, fail_on_warning, 
+{erl_opts, [debug_info, fail_on_warning,
   {i, "include"},
   {i, "deps/amqp_client/include"},
   {i, "deps/amqp_client/ebin"},
-  {i, "deps/amqp_client/include/rabbit_common/include"},
-  {i, "deps/amqp_client/include/rabbit_common/ebin"}
+  {i, "deps"},
+  {i, "deps/rabbit_common/ebin"}
 ]}.
